# SGraph-AI

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml
scripts/: gh-release-to-main.sh
sgraph_ai/: __init__.py
sgraph_ai/utils/: Version.py
tests/unit/utils/: test_Version.py
