[tool.poetry]
name        = "sgraph_ai"
version     = "v0.0.1"
description = "SGraph AI"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/SGraph-AI"
repository  = "https://github.com/the-cyber-boardroom/SGraph-AI"

[tool.poetry.dependencies]
python            = "^3.12"
osbot-utils       = "*"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
